src/test/deca/context/invalid/homemade/method_overrides_not_method.deca
// Trying to declare method which overrides not method object

class A {
    int x;
}

class B extends A {
    int x() { return 8; }
}